target_sources(ablateLibrary
        PRIVATE
        domain.cpp
        subDomain.cpp
        field.cpp
        fieldDescription.cpp
        boxMesh.cpp
        dmWrapper.cpp
        dmPlex.cpp
        meshFile.cpp
        region.cpp
        fieldDescription.cpp
        boxMeshBoundaryCells.cpp
        cadFile.cpp
        dmTransfer.cpp
        range.cpp

        PUBLIC
        domain.hpp
        subDomain.hpp
        field.hpp
        fieldDescription.hpp
        boxMesh.hpp
        dmWrapper.hpp
        dmPlex.hpp
        meshFile.hpp
        region.hpp
        fieldDescription.hpp
        fieldDescriptor.hpp
        boxMeshBoundaryCells.hpp
        cadFile.hpp
        dmTransfer.hpp
        range.hpp
        )

add_subdirectory(modifiers)
add_subdirectory(RBF)
