target_sources(ablateLibrary
        PRIVATE
        domain.cpp
        subDomain.cpp
        field.cpp
        fieldDescription.cpp
        boxMesh.cpp
        dmWrapper.cpp
        dmPlex.cpp
        meshFile.cpp
        region.cpp
        fieldDescription.cpp
        boxMeshBoundaryCells.cpp
        cadFile.cpp
        dmTransfer.cpp
        range.cpp
        initializer.cpp
        hdf5Initializer.cpp
        initializerList.cpp
        meshGenerator.cpp

        PUBLIC
        domain.hpp
        subDomain.hpp
        field.hpp
        fieldDescription.hpp
        boxMesh.hpp
        dmWrapper.hpp
        dmPlex.hpp
        meshFile.hpp
        region.hpp
        fieldDescription.hpp
        fieldDescriptor.hpp
        boxMeshBoundaryCells.hpp
        cadFile.hpp
        dmTransfer.hpp
        range.hpp
        dynamicRange.hpp
        reverseRange.hpp
        initializer.hpp
        hdf5Initializer.hpp
        initializerList.hpp
        meshGenerator.hpp
        fieldAccessor.hpp
        constFieldAccessor.hpp
        accessor.hpp
)

add_subdirectory(modifiers)
add_subdirectory(RBF)
add_subdirectory(descriptions)
