target_sources(ablateLibrary
        PRIVATE
        fieldErrorMonitor.cpp
        solutionErrorMonitor.cpp
        timeStepMonitor.cpp
        ignitionDelayPeakYi.cpp
        ignitionDelayTemperature.cpp
        extractLineMonitor.cpp
        dmViewFromOptions.cpp
        particleCount.cpp
        particleAverage.cpp
        curveMonitor.cpp
        maxMinAverage.cpp
        physicsTimeStep.cpp
        probes.cpp
        rocketMonitor.cpp
        PUBLIC
        monitor.hpp
        fieldErrorMonitor.hpp
        solutionErrorMonitor.hpp
        timeStepMonitor.hpp
        ignitionDelayPeakYi.hpp
        ignitionDelayTemperature.hpp
        extractLineMonitor.hpp
        dmViewFromOptions.hpp
        particleCount.hpp
        particleAverage.hpp
        curveMonitor.hpp
        maxMinAverage.hpp
        physicsTimeStep.hpp
        probes.hpp
        rocketMonitor.hpp
        )

add_subdirectory(logs)
add_subdirectory(probes)